# tdd-cpp-jeff-langr-my-code-version

./: .gitignore  .gitmodules  README.md  run_docker.sh
chapter2_Soundex/: CMakeLists.txt  Soundex.cpp  Soundex.h  SoundexTest.cpp
chapter2_Soundex/cmake/Modules/: gtest.cmake
docker/: Makefile  entrypoint.sh  run_docker.sh
docker/generic-card/: Dockerfile
docker/nvidia-opengl/: Dockerfile
source_code/: README.md
source_code/chapter2_Soundex/: Soundex.cpp  Soundex.h  SoundexTest.cpp
source_code/chapter2_Soundex_Final/: CMakeLists.txt  Soundex.cpp  Soundex.h  SoundexTest.cpp  char_utilities.cpp  char_utilities.h  char_utilities_tests.cpp  string_utilities.cpp  string_utilities.h  string_utilities_tests.cpp
source_code/chapter3_RetweetClass/: CMakeLists.txt  RetweetCollection.h  RetweetCollectionTest.cpp  Tweet.h  Tweet.h.autosave  TweetTest.cpp  main.cpp
source_code/chapter3_and_4_RetweetClass/: CMakeLists.txt  RetweetCollection.h  RetweetCollectionTest.cpp  Tweet.cpp  Tweet.h  TweetTest.cpp  main.cpp
source_code/chapter4_ParametrizedTest/: CMakeLists.txt  ParameterizedTest.cpp
source_code/chapter5_PlaceDescriptionService/mock_tools/: PlaceDescriptionService.cpp  PlaceDescriptionService.h  PlaceDescriptionServiceTest.cpp
source_code/chapter5_PlaceDescriptionService/mock_tools/first_mock_example/: AddressExtractor.cpp  CMakeLists.txt  Http.h
source_code/chapter5_PlaceDescriptionService/mock_tools/mock_with_factory_class/: Address.h  AddressExtractorTest.cpp  CMakeLists.txt  CurlHttp.cpp  CurlHttpTest.cpp  HttpFactory.cpp  HttpFactory.h  PlaceDescriptionService.cpp  PlaceDescriptionService.h  PlaceDescriptionServiceTest.cpp
source_code/chapter5_PlaceDescriptionService/mock_tools/mock_with_factory_method/: CMakeLists.txt  PlaceDescriptionService.cpp  PlaceDescriptionService.h  PlaceDescriptionServiceTest.cpp
source_code/chapter5_PlaceDescriptionService/mock_tools/mock_with_override_method/: CMakeLists.txt  CurlHttp.h  PlaceDescriptionService.cpp  PlaceDescriptionService.h
source_code/chapter5_PlaceDescriptionService/mock_tools/mock_with_return_value/: CMakeLists.txt
source_code/chapter5_PlaceDescriptionService/mock_tools/mock_with_template_class/: AddressExtractor.h  CMakeLists.txt  PlaceDescriptionService.h  PlaceDescriptionServiceTest.cpp
source_code/chapter5_PlaceDescriptionService/stubs_example/: Address.h  AddressExtractor.cpp  CMakeLists.txt  Http.h  PlaceDescriptionService.cpp  PlaceDescriptionService.h  PlaceDescriptionServiceTest.cpp
source_code/chapter7_WavPublisher/: CMakeLists.txt  FileUtil.cpp  FileUtil.h  FileUtilTest.cpp  Snippet.h  SnippetTests.cpp  StreamUtil.cpp  StreamUtil.h  StreamUtilTest.cpp  WavDescriptor.cpp  WavDescriptor.h  WavReader.cpp  WavReader.h  WavReaderTest.cpp  WavStructs.h  main.cpp  testmain.cpp
source_code/chapter7_WavPublisher/rlog_stubs/: CMakeLists.txt  RLogChannel.cpp  RLogNode.cpp  StdioNode.cpp  rlog.cpp
